# nmem

./: .gitignore  .gitmodules  .lsp.json  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  TODO.md  clippy.toml  setup.sh
.cargo/: config.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
dashboards/: nmem-memory-pipeline.json
design/: CLAUDE.md  CONFIG.md  DESIGN.md  MEMORY.md  SCHEMA.md  VSM.md  classifiers-reference.md  claude-mem-rebuild.md  dojo-design.md  dojo-system.md  dojo.md  file-history-refinement.md  lsp-investigation.md
design/ADR/: ADR-001-Storage-Layer.md  ADR-002-Observation-Extraction-Strategy.md  ADR-003-Daemon-Lifecycle.md  ADR-004-Project-Scoping-and-Isolation.md  ADR-005-Forgetting-Strategy.md  ADR-006-Interface-Protocol.md  ADR-007-Trust-Boundary-and-Secrets-Filtering.md  ADR-008-Distribution-and-Installation.md  ADR-009-S4-Data-Model.md  ADR-010-Work-Unit-Detection.md  ADR-011-Phase-Classification.md  ADR-012-Visualization-Server.md  ADR-013-Scope-Classification.md  ADR-014-Adaptive-Capability.md  ADR-015-Fleet-Beacon.md  ADR-016-Direct-Inference.md  ADR-017-Fleet-Builds.md  CLAUDE.md
design/skills/: ensembled-research.md
design/way/: researcher-6.md
hooks/: hooks.json  pre-commit
models/: converge-diverge.json  internal-external.json  routine-novel.json  think-act.json
scripts/: install.ps1  install.sh  nmem-hook.sh
src/: cli.rs  config.rs  context.rs  db.rs  extract.rs  filter.rs  lib.rs  main.rs  maintain.rs  metrics.rs  purge.rs  query.rs  record.rs  s1_4_inference.rs  s1_4_summarize.rs  s1_context.rs  s1_extract.rs  s1_git.rs  s1_lsp.rs  s1_mark.rs  s1_pin.rs  s1_record.rs  s1_search.rs  s1_serve.rs  s2_classify.rs  s2_friction.rs  s2_inference.rs  s2_locus.rs  s2_novelty.rs  s2_scope.rs  s3_learn.rs  s3_maintain.rs  s3_purge.rs  s3_sweep.rs  s4_beacon.rs  s4_context.rs  s4_dispatch.rs  s4_map.rs  s4_memory.rs  s5_config.rs  (+9 more)
tests/: dispatch_integration.rs  git_integration.rs  integration.rs  lsp_integration.rs  serve_integration.rs
tools/: analyze.py  backfill.py  capture.py  classify-eval.py  classify-extract.py  classify-generate.py  classify-ingest.py  classify-label-heuristic.py  classify-train.py  classify-wordnet.py  classify-zeroshot.py  context.py  corpus-locus.json  corpus-novelty.json  corpus-plan-build-100.json  corpus-plan-build-200.json  corpus-think-act-500.json  corpus-think-act-7k.json  corpus-think-act-augmented.json  corpus.json  dashboard.json  extract.py  metrics.py  schema_proto.py  scope-label-prompt.md
tools/inference-test/: Cargo.toml
tools/inference-test/.cargo/: config.toml
tools/inference-test/src/: main.rs
tools/nats-proto/: Cargo.toml
tools/nats-proto/src/: main.rs
tools/prompt-lab/: Cargo.toml
tools/prompt-lab/prompts/: 00-baseline.toml  01-example.toml  02-types.toml  03-constraints.toml  04-brief.toml
tools/prompt-lab/src/: main.rs
tools/repo-map/: Cargo.toml
tools/repo-map/src/: main.rs
