[package]
name = "nmem"
version = "0.1.0"
edition = "2024"
description = "Cross-session memory for Claude Code"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
rusqlite = { version = "0.38", features = ["bundled"] }
rusqlite_migration = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.11"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
