[package]
name = "nmem"
version = "0.1.0"
edition = "2024"
description = "Cross-session memory for Claude Code"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
rmcp = { version = "0.15", features = ["server", "transport-io"] }
rusqlite = { version = "0.38", features = ["bundled-sqlcipher", "functions"] }
rusqlite_migration = "2.3"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
opentelemetry = { version = "0.30", features = ["metrics"] }
opentelemetry_sdk = { version = "0.30", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.30", features = ["metrics", "grpc-tonic", "http-proto"] }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
