[package]
name = "nmem"
version = "1.2.0"
edition = "2024"
description = "Cross-session memory for Claude Code"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
rmcp = { version = "1", features = ["server", "transport-io"] }
rusqlite = { version = "0.38", features = ["bundled-sqlcipher", "functions"] }
rusqlite_migration = "2.3"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
toml = "0.8"
ureq = { version = "3", features = ["json"] }
git2 = { version = "0.20", default-features = false }
regex = "1.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "signal"] }
tower-lsp-server = "0.23"
opentelemetry = { version = "0.30", features = ["metrics"] }
opentelemetry_sdk = { version = "0.30", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.30", features = ["metrics", "grpc-tonic", "http-proto"] }
llama-cpp-2 = { version = "=0.1.140", default-features = false }
hf-hub = "0.5"
encoding_rs = "0.8"
async-nats = "0.46"
bytes = "1"
futures = "0.3"

[features]
default = []
cuda = ["llama-cpp-2/cuda"]
rocm = ["llama-cpp-2/rocm"]
metal = ["llama-cpp-2/metal"]
beacon = []

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
