[package]
name = "inference-test"
version = "0.1.0"
edition = "2024"

[dependencies]
llama-cpp-2 = { version = "=0.1.138", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
hf-hub = "0.5"

[features]
default = []
cuda = ["llama-cpp-2/cuda"]
rocm = ["llama-cpp-2/rocm"]

[profile.release]
opt-level = 3
lto = true
